# spikes

./: .gitignore  README.md  forecasting.ipynb  pyproject.toml
configs/: config.yaml
examples/: 1-intro-to-brian-neurons.ipynb  2-intro-to-brian-synapses.ipynb  3-intro-to-brian-simulations.ipynb  mnist-spiking-neural-network.ipynb
speech_commands/: dataset.ipynb  snn_test.ipynb  snn_train.ipynb
src/: __init__.py
src/data/: loader.py  preprocessing.py
src/evaluation/: metrics.py
src/models/: __init__.py  architectures.py  training.py
src/spiking/: __init__.py
src/utils/: helpers.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  test_data.py
