[project]
name = "spiking"
version = "0.1.0"
description = "Spiking neural networks sandbox"
readme = "README.md"
authors = [
    { name = "3nricomarinelli", email = "enrico.marinelli2910@gmail.com"},
    { name = "paulpo99", email = "paolo.ritirato@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.5",
    "scikit-learn==1.7.1",
    "tensorflow==2.20.0rc0",
    "nbconvert==7.16.6",
    "nbstripout==0.8.1",
    "ipykernel>=7.0.1",
    "librosa>=0.11.0",
    "pandas",
    "torch",
    "snntorch",
    "seaborn",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
